--- a/coding/templates/coding/about.html
+++ b/coding/templates/coding/about.html
@@ -13,10 +13,9 @@
         </div>
     </div>
     <div class="col-md-6 col-xl-5 text-center text-md-left">
-        <h2 class="h1 mb-4">Coding Sky</h2>
-        <p class="lead">Coding Sky is a web application developed for beginners to learn basic programming knowledge.</p>
-        <p class="lead">The application is based on a <strong>Coding Game</strong> developed by Unity, where players can learn coding by playing the game and viewing the reference answers given, and can test their knowledge in the <strong>Quiz</strong> page.</p>
-        <img src="../../assets/img/signature.svg" alt="signature" class="mt-4" width="150">
+        <h2 class="h1 mb-4">About Coding Sky</h2>
+        <p class="lead">Coding Sky is a MSc Project at the University of Glasgow. The author of the project is Kai Sun.</p>
+        <p class="lead">The application is based on a <strong>Coding Game</strong> developed by Unity, where players can learn coding by playing the game and viewing the reference answers given, write real <strong>Javascript</strong> code in the online code editor, or test their knowledge in the <strong>Quiz</strong> page.</p>
     </div>
 </div>
 {% endblock %}
