--- a/coding/templates/coding/question.html
+++ b/coding/templates/coding/question.html
@@ -27,7 +27,7 @@
 
 	</div>
 
-	{% include 'correct_answer.html' %}
+	{% include 'coding/correct_answer.html' %}
 
 	<p><strong>{% trans "Explanation" %}:</strong></p>
 	<div class="well " style="background-color: #fcf8e3;">
