--- a/coding/templates/coding/quiz_detail.html
+++ b/coding/templates/coding/quiz_detail.html
@@ -1,19 +1,40 @@
 {% extends 'coding/base.html' %}
 {% load i18n %}
+{% load static %}
 {% block title %}
 {{ quiz.title }}
 {% endblock %}
 
 {% block body_block %}
-<h2>{{ quiz.title }}</h2>
-<h3>{% trans "Category" %}: {{ quiz.category }}</h3>
-{% if quiz.single_attempt %}
-  <h4>{% trans "You will only get one attempt at this quiz" %}.</h4>
-{% endif %}
-<p>{{ quiz.description }}</p>
-<p>
-  <a href="{% url 'coding:quiz_question' quiz_name=quiz.url %}">
-	{% trans "Start quiz" %}
-  </a>
-</p>
+<div class="row">
+  <div class="col-12">
+      <div class="card bg-primary shadow-soft border-light mb-8 mt-5">
+          <div class="card-body text-center text-md-left">
+              <div class="row align-items-center">
+                <div class="col-md-3">
+                  <img src="{% static 'img/large/quiz.jpg' %}" class="card-img rounded" alt="Code">
+                </div> 
+                  <div class="col-md-5">
+                      <h2 class="mb-1">{{ quiz.title }}</h2>
+                      <p class="mb-0">
+                        {% trans "Category" %}: {{ quiz.category }}
+                      </p>
+                      {% if quiz.single_attempt %}
+                        <p class="mb-2">{% trans "You will only get one attempt at this quiz" %}.</p>
+                      {% endif %}
+                      <p class="mb-0">
+                        {{ quiz.description }}
+                      </p>
+                  </div>
+                  <div class="col-md-4 mt-4 mt-md-0 text-md-right">
+                    <a class="btn btn-lg text-info btn-primary" href="{% url 'coding:quiz_question' quiz_name=quiz.url %}">
+                      <span class="fas fa-hourglass-start mr-2"></span>
+                      {% trans "Start quiz" %}
+                    </a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
 {% endblock %}
