--- a/coding/templates/coding/quiz_list.html
+++ b/coding/templates/coding/quiz_list.html
@@ -6,7 +6,7 @@
 {% block body_block %}
 <h2>{% trans "List of quizzes" %}</h2>
     {% if quiz_list %}
-		<table class="table table-bordered table-striped">
+		<table class="table table-hover shadow-inset rounded">
 
 		  <thead>
 			<tr>
@@ -23,13 +23,13 @@
         {% for quiz in quiz_list %}
 
   			<tr>
-			  <td>{{ quiz.title }}</td>
-			  <td>{{ quiz.category }}</td>
-			  <td>{{ quiz.exam_paper }}</td>
-			  <td>{{ quiz.single_attempt }}</td>
-			  <td>
-				<a href="{% url 'coding:quiz_start_page' slug=quiz.url %}">
-				  {% trans "View details" %}
+			  <td class="align-middle">{{ quiz.title }}</td>
+			  <td class="align-middle">{{ quiz.category }}</td>
+			  <td class="align-middle">{{ quiz.exam_paper }}</td>
+			  <td class="align-middle">{{ quiz.single_attempt }}</td>
+			  <td class="align-middle">
+				<a href="{% url 'coding:quiz_start_page' slug=quiz.url %}" class='btn btn-primary btn-sm mb-0 mt-0'>
+				  {% trans "Attempt Quiz" %}
 				</a>
 			</tr>
 
