--- a/coding/templates/coding/result.html
+++ b/coding/templates/coding/result.html
@@ -17,7 +17,7 @@
 	  {{ previous.previous_outcome|yesno:"correct,incorrect" }}
 	</strong>
   </p>
-  {% include 'correct_answer.html' %}
+  {% include 'coding/correct_answer.html' %}
   <p><strong>{% trans "Explanation" %}:</strong></p>
   <div class="well " style="background-color: #fcf8e3;">
     <p>{{ previous.previous_question.explanation }}</p>
