--- a/coding/templates/coding/login.html
+++ b/coding/templates/coding/login.html
@@ -87,7 +87,7 @@
                                             </div>
                                         </div>
 
-                                        <button type="submit" class="btn btn-block btn-primary">Login</button>
+                                        <button type="submit" class="btn btn-block btn-primary animate-down-2">Login</button>
                                     </form>
                                 
                                     <div class="d-block d-sm-flex justify-content-center align-items-center mt-4">
