--- a/coding/templates/coding/solution.html
+++ b/coding/templates/coding/solution.html
@@ -33,34 +33,34 @@
         <!-- Tab Nav -->
         <div class="nav-wrapper position-relative mb-4">
             <ul class="nav nav-pills flex-column flex-sm-row" id="tabs-text" role="tablist">
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0 active" id="tabs-text-1-tab" data-toggle="tab" href="#tabs-text-1" role="tab" aria-controls="tabs-text-1" aria-selected="true">IDE</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-2-tab" data-toggle="tab" href="#tabs-text-2" role="tab" aria-controls="tabs-text-2" aria-selected="false">Level 1</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-3-tab" data-toggle="tab" href="#tabs-text-3" role="tab" aria-controls="tabs-text-3" aria-selected="false">Level 2</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-4-tab" data-toggle="tab" href="#tabs-text-4" role="tab" aria-controls="tabs-text-4" aria-selected="false">Level 3</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-5-tab" data-toggle="tab" href="#tabs-text-5" role="tab" aria-controls="tabs-text-5" aria-selected="false">Level 4</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-6-tab" data-toggle="tab" href="#tabs-text-6" role="tab" aria-controls="tabs-text-6" aria-selected="false">Level 5</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-7-tab" data-toggle="tab" href="#tabs-text-7" role="tab" aria-controls="tabs-text-7" aria-selected="false">Level 6</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-8-tab" data-toggle="tab" href="#tabs-text-8" role="tab" aria-controls="tabs-text-8" aria-selected="false">Level 7</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-9-tab" data-toggle="tab" href="#tabs-text-9" role="tab" aria-controls="tabs-text-9" aria-selected="false">Level 8</a>
                 </li>
-                <li class="nav-item mr-sm-3 mr-md-0">
+                <li class="nav-item mr-sm-3 mr-md-0 animate-up-2">
                     <a class="nav-link mb-sm-3 mb-md-0" id="tabs-text-10-tab" data-toggle="tab" href="#tabs-text-10" role="tab" aria-controls="tabs-text-10" aria-selected="false">Basic Block</a>
                 </li>
             </ul>
@@ -81,8 +81,8 @@ console.log("Hello World!")
                                 <div class="col-md-12" style="height:540px; width: 100%; overflow: auto;">
                                     <ul class="editor__console-logs"></ul>
                                 </div>
-                                <button type="button" class="editor__run btn btn-primary text-danger ml-2 mr-1" style="width: 47%;"><span class="fas fa-play mr-2"></span>Run</button>
-                                <button type="button" class="editor__reset btn btn-primary text-dark ml-0 mr-2" style="width: 47%;"><span class="fas fa-redo mr-2"></span>Reset</button>
+                                <button type="button" class="editor__run btn btn-primary text-danger ml-2 mr-1 animate-down-2" style="width: 47%;"><span class="fas fa-play mr-2"></span>Run</button>
+                                <button type="button" class="editor__reset btn btn-primary text-dark ml-0 mr-2 animate-down-2" style="width: 47%;"><span class="fas fa-redo mr-2"></span>Reset</button>
                             </div>
                             
                         </div>
