--- a/coding/templates/coding/correct_answer.html
+++ b/coding/templates/coding/correct_answer.html
@@ -1,19 +1,21 @@
 {% load i18n %}
+
 {% if previous.answers %}
 
   {% if user_was_incorrect %}
-    <div class="alert alert-error">
-  	  <strong>{% trans "You answered the above question incorrectly" %}</strong>
+	<div class="alert alert-warning shadow-inset" role="alert">
+		<span class="fas fa-fire"></span>
+  	  	<strong>{% trans "You answered the above question incorrectly" %}</strong>
     </div>
   {% endif %}
 
-  <table class="table table-striped table-bordered">
+  <table class="table table-hover shadow-inset rounded">
     <tbody>
   	  {% for answer in previous.answers %}
         {% if answer.correct %}
   	    <tr class="success">
   		  <td>{{ answer.content }}</td>
-  		  <td><strong>{% trans "This is the correct answer" %}</strong></td>
+  		  <td style="color: #00BF9A;"><strong>{% trans "This is the correct answer" %}</strong></td>
         {% else %}
   		<tr>
       	  <td>{{ answer.content }}</td>
