--- a/coding/templates/coding/register.html
+++ b/coding/templates/coding/register.html
@@ -68,7 +68,7 @@
                                     <form method="POST" class="mt-4">
 										{% csrf_token %}
 										{{ register_form|crispy }}                                        
-                                        <button type="submit" class="btn btn-block btn-primary">Register</button>
+                                        <button type="submit" class="btn btn-block btn-primary animate-down-2">Register</button>
                                     </form>
                                 
                                     <div class="d-block d-sm-flex justify-content-center align-items-center mt-4">
